css/style.css
/* ... */
.form__field {
  display: inline;
  color: #7DB665;
  outline: none;

  &:empty {
    display: inline-block;
    color: #DDD;
  }
  
  &:empty,
  &:empty:focus {
    &:before {
      content: attr(data-placeholder);
    }
  }
}

@keyframes init {
  75% {
    transform: translateY(-20px);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes do-blur {
  0% {
    filter: url(#blur4);
  }
  
  25% {
    filter: url(#blur3);
  }
  
  50% {
    filter: url(#blur2);
  }
  
  75% {
    filter: url(#blur1);
  }
  
  100% {
    filter: url(#blur0); 
  }
}
/* ============================== */

.animatePin{
  -webkit-animation-name: animationPin;
   -webkit-animation-duration: 5s;
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-iteration-count: infinite;    
   -webkit-animation-play-state: running;    
   animation-name: animationPin;
   animation-duration: 5s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;    
   animation-play-state: running;
   background: #f00;
}
@-webkit-keyframes animationPin {
 0%     {background:red;}
 30.0%  {background:#ffb3b3;}
 40.0%  {background:#0000ff;}
 50.0%  {background:#8080ff;}
 70.0%  {background:#006600;}
 90.0%  {background:#66ff66;}
 100.0%  {background:red;}
}

.pushpin {
 margin: -15px auto -15px auto;
 position: relative;
 float: right;
 width:20px;
 height:35px;
 z-index:1;
}
.pushpin.tilted {
 -ms-transform:rotate(9deg);
 -moz-transform:rotate(9deg);
 -webkit-transform:rotate(9deg);
 -o-transform:rotate(9deg);
   transform:rotate(9deg);
}
.pinhead {
 background: darkred;
 width: 75%;
 height: 20%;
 border-radius: 100%;
 position: relative;
 left:12.5%;
 top:0;
}
.pinhead:after {
 content:'';
 width: 100%;
 height: 100%;
 border-radius: 50%;
 background: red;
 position: absolute;
 top: -30%;
 left:0;
}

.pinbase {
 background: darkred;
 width: 100%;
 height: 25%;
 border-radius: 100%;
 position: relative;
 left:0;
 top:30%;
}
.pinbase:after {
 content:'';
 width: 100%;
 height: 100%;
 border-radius: 50%;
 background: red;
 position: absolute;
 top: -30%;
 left:0;
}

.pinshaft {
 background: darkred;
 height: 30%;
 width: 50%;
 position: relative;
 border-radius: 0 ;
 top: -30%;
 left: 25%;
}

.pinshaft:after {
 content:'';
 width: 100%;
 height: 50%;
 border-radius: 50%;
 background: darkred;
 position: absolute;
 top: 75%;
}

.pinpoint {
 display: block;
 background: #999;
 height: 70%;
 width: 14%;
 position: absolute;
 border-radius: 0 0 20% 20%;
 z-index: -50;
 bottom: 0;
 left: 43%;
}

/* Working code */
.animateUnread {  
  -webkit-animation-name: animationNew;
   -webkit-animation-duration: 5s;
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-iteration-count: infinite;    
   -webkit-animation-play-state: running;    
   animation-name: animationNew;
   animation-duration: 5s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;    
   animation-play-state: running;
   color: #f00; 
   float: none;
 font-weight:bold;
}
@-webkit-keyframes animationNew {
   0%     {color:b30000;}
   30.0%  {color:#330000;}
   40.0%  {color:#0000ff;}
   50.0%  {color:#ff6666;}
  70.0%  {color:#006600;}
  90.0%  {color:#b35900;}
   100.0%  {color:red;}
}


/* Working code----------- */

@-webkit-keyframes pulseBorder {
 from {
   border:solid 1px #f00;
 }
 to {
   border:solid 2px #69ca62;
       
 }
}

.animateDivBorder {
 -webkit-animation-name: pulseBorder;
 -webkit-animation-iteration-count: infinite;
 -webkit-animation-timing-function: ease;
 -webkit-animation-direction: alternate;
 -webkit-animation-duration: 0.5s;
   border: solid 1px #69ca62
}

.stickyNote ul{
 overflow:scroll;
 padding:3em;
 
}
.noticeFooter {
   position: absolute;
 font-size:80%;
   bottom: 0px;
 width: 100%;
   padding: 0 20px 0 0px;
}
ul li section{
 text-decoration:none;
 color:#000;
 background:#ffc;
 display:block;
 height:300px;
 width:300px;
 padding:7px;
}

.stickyNote{
 margin:1em;
 float:left;
 list-style:none;
 position: relative;
}

.stickyNote li:nth-child(even) section{
 -o-transform:rotate(4deg);
 -webkit-transform:rotate(4deg);
 -moz-transform:rotate(4deg);
 position:relative;
 top:5px;
}
.stickyNote li:nth-child(3n) section{
 -o-transform:rotate(-3deg);
 -webkit-transform:rotate(-3deg);
 -moz-transform:rotate(-3deg);
 position:relative;
 top:-5px;
}
.stickyNote li:nth-child(5n) section{
 -o-transform:rotate(5deg);
 -webkit-transform:rotate(5deg);
 -moz-transform:rotate(5deg);
 position:relative;
 top:-10px;
}

.stickyNote li section:hover,ul li section:focus{
 -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
 -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
 box-shadow:10px 10px 7px rgba(0,0,0,.7);
 -webkit-transform: scale(1.25);
 -moz-transform: scale(1.25);
 -o-transform: scale(1.25);
 position:relative;
 z-index:5;
}
.showMoreFooter {
 position: absolute;
 font-size:12px;
 bottom: 35px;
 width: 100%;
 padding: 0 20px 0 0px;
}
.detailsText{
 /* height:138px; */
 overflow: auto;
}
/*.detailsText:hover {*/
 /*overflow: auto;*/
/*}*/
.detailsText div{
 background-color: transparent !important;
}
/*-------------------Scroll bar -----------------*/
.detailsText::-webkit-scrollbar-track
{
 -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 border-radius: 5px;
}
.detailsText::-webkit-scrollbar
{
 -webkit-appearance: none;
 width: 5px;
}
.detailsText::-webkit-scrollbar-thumb
{
 border-radius: 4px;
 background-color: rgba(0,0,0,.5);
 -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}
/* ... */

